# machine-learning

./: .gitignore  06-modelagem-estatistica-indicadores-socioeconomicos.ipynb  README.md
01-deploy-ml/02-prevendo-churn-de-clientes/: README.md  deploy.py  requirements.txt
01-deploy-ml/03-modelo-ml-nuvem-aws-escola/: README.md
01-deploy-ml/04-api-texto-img/: README.md  main.py  requirements.txt
01-deploy-ml/05-construcao-feature-store/: README.md  pyproject.toml
01-deploy-ml/05-construcao-feature-store/src/: explorar_dados.py  pipeline.py  salvar_modelo.py
01-deploy-ml/06-versionamento/: requirements.txt
01-deploy-ml/07-monitorar-data-driften/: README.md  requirements.txt  script-3.py  script-4.py  script-5.py
01-deploy-ml/08-deploy-ml/: README.md
01-deploy-ml/08-deploy-ml/projeto8/: Cargo.toml
01-deploy-ml/08-deploy-ml/projeto8/src/: main.rs
01-deploy-ml/conceitos/: 01-Introducao.md  02-Processo-modelos-ml.md  03-Design-Processo-Treino-Teste.md  05-Algoritmo-Random-Forest.md  07-Importancia-Hiperparametros.md  08-Design-Processo-Deploy.md  09-Medida-AUC.md  10-API.md  11-Docker.md  14-Model-e-Data-Drift.md  15-Assistentes-Pessoais-Baseados-em-IA.md  16-Linguagem-Rust.md  (+1 more)
02-mat-est-aplicada/: 02-algoritmo-rede-neural.ipynb  03-analise-componentes-principais.ipynb  07-ocupacao-imoveis.ipynb  08-regressao-loess.ipynb  09-analise-teste-AB.ipynb
03-deep-learning/: 01-Mecanismo-Atencao.ipynb  02-Classificacao-Sentimento.ipynb
docs/: roadmap-pos.md
estudos/: roadmap-pos.md
matematica-estatistica-aplicada/: 01-Equacoes.ipynb
(+164 files in other folders)
