[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"  
version = "1.0.0"
description = "Projeto 5 - Construção de Feature Store e Engenharia de Atributos no Pipeline de Machine Learning."
authors = [{ name = "Priscila" }]
requires-python = ">=3.6"

dependencies = [
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.59.0",
  "joblib==1.5.1",
  "kiwisolver==1.4.8",
  "matplotlib==3.10.3",
  "numpy==2.3.2",
  "packaging==25.0",
  "pandas==2.3.1",
  "pillow==11.3.0",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "scikit-learn==1.7.1",
  "scipy==1.16.1",
  "seaborn==0.13.2",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "tzdata==2025.2"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88  
target-version = ["py36"]
