[package]
name = "projeto8"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
linfa = { version = "0.7.0", features = ["serde"] }
linfa-logistic = { version = "0.7.0", features = ["serde"] }
ndarray = "0.15.4"
csv = "1.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
